# wafer_map2

./: .gitignore  README.md  pyproject.toml
docs/: README.md  ai_ds_validation_audit.md  architecture.md  core_direction.md  current_milestone_checkpoint.md  curve_proposal_strategy.md  cvat_wafer_annotation_workflow.md  data_schema.md  defect_location_summary.md  defect_severity_scoring_guide.md  documentation_quality_audit.md  end_to_end_workflow.md  enterprise_readiness_assessment.md  experiment_history.md  expert_review_protocol.md  fbm_data_flow_guide.md  fbm_pattern_asset_pipeline.md  glossary.md  index.html  interest_based_retrieval.md  label_data_guidelines.md  legacy_pattern_asset_editor.md  methodology_validation.md  milestone_review.md  modeling_strategy.md  next_tasks.md  operator_manual.md  pattern_taxonomy.md  problem_definition.md  project_alignment_review.md  project_overview.md  project_structure.md  real_png_operator_runbook.md  real_unlabeled_workflow.md  real_wafer_review_checklist.md  refactor_audit.md  resize_strategy.md  review_presets.md  revised_physical_assumptions.md  roadmap.md  (+10 more)
other_sample/: realistic_fbm_experiment.py  synthetic_fbm_experiment.py
scripts/: README.md  analyze_fbm_grouping.py  analyze_png_raw_folders.py  audit_project_readiness.py  build_pattern_asset_report.py  build_segmentation_readiness.py  build_static_docs.py  compose_synthetic_from_assets.py  evaluate_curve_proposals.py  evaluate_defect_feature_retrieval.py  evaluate_feature_ablation.py  evaluate_grouping_stability.py  evaluate_interest_retrieval.py  interpret_fbm.py  (+27 more)
(+109 files in other folders)
